--- a/MAPSI/TME/tme8/tme8.ipynb
+++ b/MAPSI/TME/tme8/tme8.ipynb
@@ -188,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.          1.06306895  0.41394934 10.          0.34815189  0.83954357\n",
-      " 10.          5.94282009  0.79544614  0.99238     0.80863956]\n"
+      "[ 0.          2.71669685 10.         10.         10.         10.\n",
+      " 10.         10.          3.19055869  3.17528764  2.86665883]\n"
      ]
     }
    ],
@@ -242,28 +242,24 @@
     "        contamination = np.random.random(len(params[0][0])) < params[0][0]\n",
     "        \n",
     "        # tirage Exp selon params[1][0]: quand est ce que les cibles sont contaminées (Tref + tirage)\n",
-    "        t = Tref + exp(params[1][0] * contaminant)\n",
+    "        t = Tref + exp(params[1][0] * contamination)\n",
     "\n",
     "        # ce temps est-il inféreur au temps auquel la cible aurait déjà été contaminée?\n",
-    "        oui = t < times\n",
-    "        toUpdate = (cibles & contamination & oui).astype(bool)\n",
-    "\n",
     "        # mettre à jour times\n",
-    "        times[toUpdate] = t[toUpdate]\n",
+    "        times[cibles] = np.minimum(t, times[cibles])\n",
     "        # mettre à jour infectious\n",
-    "        infectious[toUpdate] = t[toUpdate]\n",
+    "        infectious[cibles] = np.minimum(t, times[cibles])\n",
     "\n",
     "    return times\n",
     "\n",
-    "# np.random.seed(1)\n",
-    "np.random.seed()\n",
+    "np.random.seed(1)\n",
     "print(simulation(graph,[0], maxT))\n",
-    "# print(simulation(graph,[0], maxT))\n",
-    "# print(simulation(graph,[0], maxT))\n",
-    "# np.random.seed(1)\n",
-    "# print(simulation(graph,[0,1], maxT))\n",
-    "# print(simulation(graph,[0,1], maxT))\n",
-    "# print(simulation(graph,[0,1], maxT))\n"
+    "print(simulation(graph,[0], maxT))\n",
+    "print(simulation(graph,[0], maxT))\n",
+    "np.random.seed(1)\n",
+    "print(simulation(graph,[0,1], maxT))\n",
+    "print(simulation(graph,[0,1], maxT))\n",
+    "print(simulation(graph,[0,1], maxT))\n"
    ]
   },
   {
