--- a/MAPSI/TME/tme8/tme8.ipynb
+++ b/MAPSI/TME/tme8/tme8.ipynb
@@ -263,24 +263,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def simulation(graph, sources, maxT):\n",
-    "    names, k, r = graph\n",
-    "    nbNodes = len(names)\n",
-    "    infectious = np.zeros(nbNodes) + maxT # maxT partout\n",
-    "    infectious[sources] = 0             # + 0 sur les sources\n",
-    "    times = infectious.copy()\n",
-    "    while (infectious < maxT).any():\n",
-    "        i = times.argmin()\n",
-    "        Tref = times[i]\n",
-    "        "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "uxs-LQ3NgqHC"
@@ -310,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {
     "id": "dV9zdHYPG7Op"
    },
@@ -319,8 +301,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.      0.91466 0.917   0.91624 0.91506 0.91466 0.91641 0.91587 0.77854\n",
-      " 0.91582 0.91707]\n"
+      "[1.      0.7785  0.25939 0.44694 0.23214 0.11123 0.15518 0.09145 0.58973\n",
+      " 0.36455 0.38976]\n",
+      "[1.      0.77994 0.25928 0.44709 0.23307 0.11118 0.155   0.09067 0.59052\n",
+      " 0.36201 0.38788]\n",
+      "[1.      1.      0.35724 0.58993 0.32084 0.17582 0.20088 0.13995 0.79891\n",
+      " 0.49967 0.49876]\n",
+      "[0.71818 0.79804 1.      0.93559 0.89997 0.49813 0.15957 0.35803 1.\n",
+      " 0.44108 0.39904]\n"
      ]
     }
    ],
@@ -342,14 +330,14 @@
     "rInf=getProbaMC(graph,[0], maxT)\n",
     "print(rInf) \n",
     "\n",
-    "# rInf=getProbaMC(graph,[0], maxT)\n",
-    "# print(rInf)\n",
+    "rInf=getProbaMC(graph,[0], maxT)\n",
+    "print(rInf)\n",
     "\n",
-    "# rInf=getProbaMC(graph,[0,1], maxT)\n",
-    "# print(rInf)  \n",
+    "rInf=getProbaMC(graph,[0,1], maxT)\n",
+    "print(rInf)  \n",
     "\n",
-    "# rInf=getProbaMC(graph,[2,8], maxT)\n",
-    "# print(rInf) "
+    "rInf=getProbaMC(graph,[2,8], maxT)\n",
+    "print(rInf) "
    ]
   },
   {
@@ -406,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -414,7 +402,16 @@
     "id": "0sPmzchnSP3r",
     "outputId": "66b3d635-6c9b-4bea-a6d7-4c9e2b60ff75"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preds= {1: [(0, 0.9, 0.2), (8, 0.8, 14)], 0: [(1, 0.9, 3)], 2: [(1, 0.2, 1), (3, 0.4, 0.5)], 3: [(2, 0.5, 0.2), (4, 0.9, 2), (1, 0.5, 2)], 4: [(2, 0.9, 10)], 5: [(2, 0.5, 0.5)], 7: [(5, 0.7, 15), (6, 0.1, 4)], 6: [(1, 0.2, 3)], 8: [(1, 0.8, 0.8)], 9: [(8, 0.2, 0.1), (10, 0.9, 1)], 10: [(1, 0.5, 12)]}\n",
+      "succs= {0: [(1, 0.9, 0.2)], 1: [(0, 0.9, 3), (2, 0.2, 1), (3, 0.5, 2), (6, 0.2, 3), (8, 0.8, 0.8), (10, 0.5, 12)], 2: [(3, 0.5, 0.2), (4, 0.9, 10), (5, 0.5, 0.5)], 3: [(2, 0.4, 0.5)], 4: [(3, 0.9, 2)], 5: [(7, 0.7, 15)], 6: [(7, 0.1, 4)], 8: [(9, 0.2, 0.1), (1, 0.8, 14)], 10: [(9, 0.9, 1)]}\n"
+     ]
+    }
+   ],
    "source": [
     "# pré-calcul des précécesseurs et successeurs pour gagner du temps ensuite\n",
     "def getPredsSuccs(graph):\n",
@@ -460,10 +457,11 @@
     "\n",
     "Dans la méthode $computeab(v, times, preds)$, on prépare le calcul et les mises à jour de ces quantités. La méthode calcule, pour un noeud $v$ selon les temps d'infection courants donnés dans $times$, deux quantités $a$ et $b$: \n",
     "\n",
-    "$$a= \\left\\{\n",
+    "$$\n",
+    "a= \\left\\{\n",
     "\\begin{array}{l}\n",
-    "\\max(1e^{-20}, \\sum_{i \\in preds[v], t_i<t_v} \\alpha_{i,v} / \\beta_{i,v}) \\mbox{ si: } t_v< maxT \\\\\n",
-    "1 \\mbox{ sinon }\n",
+    "\\max(1e^{-20}, \\sum_{i \\in preds[v], t_i<t_v} \\alpha_{i,v} / \\beta_{i,v}) \\text{ si: } t_v< maxT \\\\\n",
+    "1 \\text{ sinon }\n",
     "\\end{array}\n",
     "\\right.\n",
     "$$ \n",
@@ -478,11 +476,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "id": "cOnGCJCBSulp"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 0)\n",
+      "(0.17610107365772137, -0.1781012614571993)\n",
+      "(0.012293749653343879, -0.21077360840944234)\n",
+      "(1.0, -1.1230118785518794)\n"
+     ]
+    }
+   ],
    "source": [
     "eps=1e-20\n",
     "\n",
@@ -497,16 +506,22 @@
     "        c,k,r=map(np.array,zip(*preds)) # mise en forme des prédécesseurs\n",
     "        \n",
     "        #>>>>>>>>>>>>>\n",
-    "        # votre code ici\n",
     "        # Récupérer le temps de contamination des noeuds c\n",
-    "        # trouver les indices de tous les temps positifs ou nuls \n",
-    "        #        qui sont aussi inférieur à t\n",
+    "        t_j = times[c]\n",
+    "        # trouver les indices de tous les temps positifs ou nuls qui sont aussi inférieur à t\n",
+    "        j = np.nonzero(times[c] < t )[0]\n",
+    "\n",
     "        # calculer les delta_t associés\n",
+    "        alpha = k*r*np.exp(-r*(t - t_j))\n",
+    "        beta =  alpha/r + 1 - k\n",
     "        # calcul de b\n",
+    "        b = np.log(beta[j]).sum()\n",
     "        # si t < maxT\n",
-    "        #   calcul de a\n",
-    "        # sinon \n",
-    "        #   a = 1\n",
+    "        if t < maxT:\n",
+    "            #   calcul de a\n",
+    "            a = max(eps, (alpha[j]/beta[j]).sum())\n",
+    "        else: \n",
+    "            a = 1.0\n",
     "        #<<<<<<<<<<<<\n",
     "        \n",
     "    \n",
@@ -518,10 +533,10 @@
     "times[1]=1\n",
     "times[2]=4\n",
     "\n",
-    "print(computeab(0,times,preds, maxT, eps))\n",
-    "print(computeab(1,times,preds, maxT, eps))\n",
-    "print(computeab(2,times,preds, maxT, eps))\n",
-    "print(computeab(3,times,preds, maxT, eps))\n"
+    "print(computeab(0, times, preds, maxT, eps))\n",
+    "print(computeab(1, times, preds, maxT, eps))\n",
+    "print(computeab(2, times, preds, maxT, eps))\n",
+    "print(computeab(3, times, preds, maxT, eps))\n"
    ]
   },
   {
@@ -553,17 +568,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "id": "aM0K-VhPUXJn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ll= -13.117139892397578\n",
+      "[ 0.  1.  4. 10. 10. 10. 10. 10. 10. 10. 10.]\n",
+      "like_indiv= [1.         0.14737154 0.00995741 0.32529856 0.1        0.52489353\n",
+      " 0.8        1.         0.20059727 1.         0.5       ]\n"
+     ]
+    }
+   ],
    "source": [
     "def computell(times,preds, maxT, eps):\n",
     "    #>>>>>>\n",
-    "    # votre code ici\n",
-    "    # = calcul de a,b pour tous les v\n",
-    "    # calcul de la log-vraisemblance\n",
+    "    sa = []\n",
+    "    sb = []\n",
+    "    ll = 0\n",
+    "    for i in range(len(times)):\n",
+    "        a, b = computeab(i, times, preds, maxT, eps)\n",
+    "        sa.append(a)\n",
+    "        sb.append(b)\n",
+    "        ll += b + np.log(a)\n",
+    "    return ll, sa, sb\n",
     "    #<<<<<\n",
     "\n",
     "ll,sa,sb=computell(times,preds, maxT, eps)\n",
@@ -602,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -610,7 +642,23 @@
     "id": "rEGzpS_DaRX5",
     "outputId": "f1cd5174-87e0-426e-f665-f4a1b2ed89f5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sa= [1, 0.17610107365772137, 0.012293749653343879, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "sb= [0, -0.1781012614571993, -0.21077360840944234, -1.1230118785518794, -2.302585092994046, -0.6445598289862031, -0.22314355131373978, 0.0, -1.606456019465737, 0.0, -0.6931471805599453]\n",
+      "diffa= [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "diffb= [0.         0.         0.         1.12301188 0.         0.\n",
+      " 0.         0.         0.         0.         0.        ]\n",
+      "diffa= [ 0.          0.82389893 -0.01229375  0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.        ]\n",
+      "diffb= [0.         0.17810126 0.21077361 0.69314717 0.         0.\n",
+      " 0.22314355 0.         1.60645602 0.         0.69314718]\n"
+     ]
+    }
+   ],
    "source": [
     "def removeV(v,times,succs,sa,sb):\n",
     "    succs=succs.get(v,[])\n",
