Diapo cours 9 BIMA

--- a/BIMA/cours.tex
+++ b/BIMA/cours.tex
@@ -968,6 +968,29 @@ Mais du coup je vais relire le diapo et prendre des notes de ce que je comprends
     \item Il y a encore beaucoup beaucoup d'autre méthode : chacune avec leurs avantage et inconvéniant en fonction du type d'image 
 \end{itemize}
 
+\underline{Nouveau cours9 du 29/11} \\
+\section{Feature descriptor}
+Comme la dernière fois je relis le diapo et prend juste des notes ici : pas de ce que le prof a \displaystyle 
+
+Gabor filter
+\begin{itemize}
+    \item filtre qui permet permet d'obtenir l'orientation et la scale dans les images
+    \item Prhce du système humain avec les neurones spécialiser pour certaine orientation
+\end{itemize}
+
+Local derivative descriptors
+\begin{itemize}
+    \item ??
+    \item SIFT : ???
+    \item Autre descripteur : BRIEF, SURF, MORPS, Shape based descriptor
+    \item $\rightarrow$ Plein de descripteur, souvent on les combine, le top c'est SIFT 
+\end{itemize}
+
+Application en :
+\begin{itemize}
+    \item Image matching : recherche d'image dans image avec de la robustness
+    \item Indexing and searching in database : 
+\end{itemize}
 
 
 
