--- a/SIGNAL/fiche_formule.tex
+++ b/SIGNAL/fiche_formule.tex
@@ -84,6 +84,22 @@ TF et convolution
     TF\{x(t) * y(t)\} = X(f) \star Y(f)
 .\]
 
+Réponse en fréquence 
+\[
+    H = TF\{h\} = Y/X
+.\]
+
+
+\[
+    G_{db}(f) = 20 \log_{10} \left| H(f) \right| 
+.\]
+
+\[
+    \phi (f) = \arg H(f)
+.\]
+
+
+
 
 
 \end{document}
