--- a/MAPSI/TME/tme8/tme8.ipynb
+++ b/MAPSI/TME/tme8/tme8.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {
     "id": "dV9zdHYPG7Op"
    },
@@ -340,9 +340,20 @@
       "[1.      0.77994 0.25928 0.44709 0.23307 0.11118 0.155   0.09067 0.59052\n",
       " 0.36201 0.38788]\n",
       "[1.      1.      0.35724 0.58993 0.32084 0.17582 0.20088 0.13995 0.79891\n",
-      " 0.49967 0.49876]\n",
-      "[0.71818 0.79804 1.      0.93559 0.89997 0.49813 0.15957 0.35803 1.\n",
-      " 0.44108 0.39904]\n"
+      " 0.49967 0.49876]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21'>22</a>\u001b[0m rInf\u001b[39m=\u001b[39mgetProbaMC(graph,[\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m], maxT)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mprint\u001b[39m(rInf)  \n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=24'>25</a>\u001b[0m rInf\u001b[39m=\u001b[39mgetProbaMC(graph,[\u001b[39m2\u001b[39;49m,\u001b[39m8\u001b[39;49m], maxT)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mprint\u001b[39m(rInf)\n",
+      "\u001b[1;32m/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb Cell 12\u001b[0m in \u001b[0;36mgetProbaMC\u001b[0;34m(graph, sources, maxT, nbsimu)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# boucle for sur nbsimu\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(nbsimu):\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     times \u001b[39m=\u001b[39m simulation(graph, sources, maxT)  \u001b[39m# Réalisation d'une simulation\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39m# for k in range(len(times)):\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39m#     if times[k] != maxT: # Incrément pour les noeuds contaminés dans la simulation\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39m#         rInf[k] += 1\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m     rInf \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (times \u001b[39m!=\u001b[39m maxT)\n",
+      "\u001b[1;32m/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb Cell 12\u001b[0m in \u001b[0;36msimulation\u001b[0;34m(graph, sources, maxT)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m t \u001b[39m=\u001b[39m Tref \u001b[39m+\u001b[39m exp(params[\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m contamination)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=43'>44</a>\u001b[0m \u001b[39m# ce temps est-il inféreur au temps auquel la cible aurait déjà été contaminée?\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m \u001b[39m# mettre à jour times\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m times[cibles] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mminimum(t, times[cibles])\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=46'>47</a>\u001b[0m \u001b[39m# mettre à jour infectious\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/charles/M1-S1-DAC/MAPSI/TME/tme8/tme8.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m infectious[cibles] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mminimum(t, times[cibles])\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -356,9 +367,7 @@
     "    # boucle for sur nbsimu\n",
     "    for i in range(nbsimu):\n",
     "        times = simulation(graph, sources, maxT)  # Réalisation d'une simulation\n",
-    "        for k in range(len(times)):\n",
-    "            if times[k] != maxT: # Incrément pour les noeuds contaminés dans la simulation\n",
-    "                rInf[k] += 1\n",
+    "        rInf += (times != maxT)\n",
     "    return rInf/nbsimu # retour de rInf (normalisé en fréquence et pas en comptage)        \n",
     "\n",
     "rInf=getProbaMC(graph,[0], maxT)\n",
@@ -757,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -952,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {
     "id": "K3QmBCRbhkLM"
    },
@@ -967,10 +976,11 @@
       "[ 0.  1.  4. 10. 10. 10. 10. 10. 10. 10. 10.]\n",
       "[ 0.  1.  4. 10. 10. 10. 10. 10. 10. 10. 10.]\n",
       "[ 0.  1.  4. 10. 10. 10. 10. 10. 10. 10. 10.]\n",
-      "[ 0.  1.  4. 10. 10. 10. 10. 10. 10. 10. 10.]\n",
-      "[ 0.          1.          4.         10.         10.          4.20931617\n",
+      "[ 0.          1.          4.         10.         10.          5.82650725\n",
       " 10.         10.         10.         10.         10.        ]\n",
-      "[ 0.  1.  4. 10. 10. 10. 10. 10. 10. 10. 10.]\n"
+      "[ 0.  1.  4. 10. 10. 10. 10. 10. 10. 10. 10.]\n",
+      "[ 0.          1.          4.         10.         10.          5.15644162\n",
+      " 10.         10.         10.         10.         10.        ]\n"
      ]
     }
    ],
@@ -1118,7 +1128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref=getProbaMC(graph,[0], maxT) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1126,30 +1145,90 @@
     "id": "xsnQHVcdjfVT",
     "outputId": "8c274aa7-e425-4ed7-d3a6-a114a85988b8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Burnin\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [01:30<00:00, 110.91it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting times\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [01:31<00:00, 109.29it/s, mse=1.17e+4]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.     0.2962 0.0344 0.1475 0.0365 0.0105 0.0415 0.0159 0.211  0.0603\n",
+      " 0.0605]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
     "np.random.seed(1)\n",
     "def gb(graph, infections, maxT, burnin=1000,nbEpochs=10000,k=100,k2=50, ref=None):\n",
     "    preds, succs = getPredsSuccs(graph)\n",
-    "    _ , sa, sb = computell(times, preds, maxT, eps)\n",
+    "    nbNodes = len(graph[0])\n",
     "    times = np.array([maxT]*nbNodes,dtype=float)\n",
+    "    _ , sa, sb = computell(times, preds, maxT, eps)\n",
+    "\n",
+    "    l = list(range(nbNodes))\n",
     "    for infecte in infections:\n",
     "        times[infecte[0]] = infecte[1]\n",
-    "    \n",
+    "        l.remove(infecte[0]) # on exclus les infecté initiaux d'être choisi et de se faire reset times par inadvertance\n",
+    "    print('Burnin')\n",
     "    for _ in tqdm(range(burnin)):\n",
-    "        v = np.random.choice(nbNodes)\n",
-    "        sampleV(v, times, preds, succs, sa, sb, 10, 10, maxT)\n",
-    "    for _ in tqdm(range(nbEpochs - burnin)):\n",
-    "        v = np.random.choice(nbNodes)\n",
-    "        sampleV(v, times, preds, succs, sa, sb, 10, 10, maxT)\n",
+    "        v = np.random.choice(l)\n",
+    "        sampleV(v, times, preds, succs, sa, sb, k, k2, maxT)\n",
+    "\n",
+    "\n",
+    "    print('Collecting times')\n",
+    "    n = 0\n",
+    "    rInf = np.zeros_like(times)\n",
+    "    pbar = tqdm(range(nbEpochs - burnin))\n",
+    "    for _ in pbar:\n",
+    "        v = np.random.choice(l)\n",
+    "        sampleV(v, times, preds, succs, sa, sb, k, k2, maxT)\n",
+    "        \n",
+    "        rInf += (times < maxT)\n",
+    "        n += 1\n",
+    "        if n%1000 == 0:\n",
+    "            mse = ((rInf - ref)**2).sum() / n\n",
+    "            pbar.set_postfix(mse=mse)\n",
+    "    rate = rInf/n\n",
     "    return rate\n",
     "\n",
     "# On teste ici avec seulement des sources (i.e., des infectés au temps 0), car cela permet de comparer à la ref MonteCarlo (mais il faudrait aussi tester avec d'autres infectés : c'est l'objectif). \n",
-    "ref=getProbaMC(graph,[0], maxT) \n",
-    "rate=gb(graph,[(0,0)],maxT, burnin=100,ref=ref)\n",
-    "print(rate)\n",
-    "\n"
+    "\n",
+    "rate=gb(graph,[(0,0)],maxT, burnin=10000, nbEpochs=20000, ref=ref)\n",
+    "print(rate)"
    ]
   },
   {
