MAPSI TME8 je laisse comme ça 🤷‍♀️

--- a/MAPSI/TME/tme8/tme8.ipynb
+++ b/MAPSI/TME/tme8/tme8.ipynb
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1157,29 +1157,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [01:30<00:00, 110.91it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 116.69it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting times\n"
+      "Collecting times\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [01:31<00:00, 109.29it/s, mse=1.17e+4]"
+      "100%|██████████| 9900/9900 [01:25<00:00, 116.28it/s, mse=1.03e+4]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.     0.2962 0.0344 0.1475 0.0365 0.0105 0.0415 0.0159 0.211  0.0603\n",
-      " 0.0605]\n"
+      "[1.         0.26575758 0.02545455 0.10616162 0.0310101  0.0020202\n",
+      " 0.06262626 0.00555556 0.18343434 0.03848485 0.04636364]\n",
+      "[1.      0.77693 0.26022 0.44622 0.23268 0.11166 0.15447 0.09192 0.58924\n",
+      " 0.36201 0.38716]\n"
      ]
     },
     {
@@ -1208,15 +1211,14 @@
     "        v = np.random.choice(l)\n",
     "        sampleV(v, times, preds, succs, sa, sb, k, k2, maxT)\n",
     "\n",
-    "\n",
     "    print('Collecting times')\n",
+    "    print()\n",
     "    n = 0\n",
     "    rInf = np.zeros_like(times)\n",
     "    pbar = tqdm(range(nbEpochs - burnin))\n",
     "    for _ in pbar:\n",
     "        v = np.random.choice(l)\n",
     "        sampleV(v, times, preds, succs, sa, sb, k, k2, maxT)\n",
-    "        \n",
     "        rInf += (times < maxT)\n",
     "        n += 1\n",
     "        if n%1000 == 0:\n",
@@ -1227,8 +1229,9 @@
     "\n",
     "# On teste ici avec seulement des sources (i.e., des infectés au temps 0), car cela permet de comparer à la ref MonteCarlo (mais il faudrait aussi tester avec d'autres infectés : c'est l'objectif). \n",
     "\n",
-    "rate=gb(graph,[(0,0)],maxT, burnin=10000, nbEpochs=20000, ref=ref)\n",
-    "print(rate)"
+    "rate=gb(graph,[(0,0)],maxT, burnin=100, nbEpochs=10000, ref=ref)\n",
+    "print(rate)\n",
+    "print(ref)"
    ]
   },
   {
